# fastapi-auth-management-startup-template

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  agent.md  audit.md  claude.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai-guides/: CODE_QUALITY_CHECKLIST.md  CODING_CONVENTIONS.md  PROJECT_CONTEXT.md  PROMPT_RESPONSE_RULES.md  TECH_SPECIFIC_NOTES.md  UPDATE_PROTOCOL.md
app/: config.py  database.py  main.py  poetry_scripts.py
app/controllers/: admin_controller.py  auth_controller.py  oauth_controller.py  user_controller.py  verification_controller.py
app/middlewares/: admin_middleware.py  auth_middleware.py  verification_middleware.py
app/models/: account.py  enums.py  session.py  user.py
app/routes/: admin.py  auth.py  oauth.py  users.py
app/schemas/: admin.py  auth.py  user.py
app/utils/: deps.py  email.py  exceptions.py  jwt.py  password.py  redis_client.py  sms.py
docs/: architecture.md
helm/: test_values.yaml
tests/: test_auth.py
